[package]
name = "anthroxy"
version = "0.1.0"
edition = "2021"
description = "Transparent rate-limiting + retry reverse proxy in front of api.anthropic.com (subscription-OAuth passthrough; bodies forwarded opaque)."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2"] }

[profile.release]
opt-level = 3
lto = true
strip = true
