[package]
name = "anthroxy"
version = "0.2.1"
edition = "2021"
description = "Transparent retry reverse proxy in front of api.anthropic.com — survives 429/5xx so agents don't halt (subscription-OAuth passthrough; bodies forwarded opaque)."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2"] }

[profile.release]
opt-level = 3
lto = true
strip = true
